crates/rome_js_formatter/tests/specs/prettier/typescript/keywords/keywords-2.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: keywords-2.ts

---
# Input
```js
// https://github.com/babel/babel/pull/12356

class C {
  private *a() {}
  public *b() {}
  static *c() {}
  protected *g() {}
}

class D {
  declare<T>() {}
  readonly<T>() {}
  abstract<T>() {}
  static<T>() {}
  private<T>() {}
  public<T>() {}
  protected<T>() {}
}

class E {
  public
  private() {}
}

class Foo {
  constructor(private, public, static) {
  }
}

class F {
    constructor(public []) {}
}
class G {
    constructor(public {}) {}
}

```

# Output
```js
// https://github.com/babel/babel/pull/12356

class C {
  private *a() {}
  public *b() {}
  static *c() {}
  protected *g() {}
}

class D {
  declare<T>() {}
  readonly<T>() {}
  abstract<T>() {}
  static<T>() {}
  private<T>() {}
  public<T>() {}
  protected<T>() {}
}

class E {
  public;
  private() {}
}

class Foo {
  constructor(private, public, static) {}
}

class F {
  constructor(public []) {}
}
class G {
  constructor(public {}) {}
}

```

# Errors
```
error[SyntaxError]: Illegal use of reserved keyword `private` as an identifier in strict mode
   ┌─ keywords-2.ts:26:15
   │
26 │   constructor(private, public, static) {
   │               ^^^^^^^

error[SyntaxError]: Illegal use of reserved keyword `public` as an identifier in strict mode
   ┌─ keywords-2.ts:26:24
   │
26 │   constructor(private, public, static) {
   │                        ^^^^^^

error[SyntaxError]: Illegal use of reserved keyword `static` as an identifier in strict mode
   ┌─ keywords-2.ts:26:32
   │
26 │   constructor(private, public, static) {
   │                                ^^^^^^

error[SyntaxError]: A parameter property may not be declared using a binding pattern.
   ┌─ keywords-2.ts:31:24
   │
31 │     constructor(public []) {}
   │                        ^^

error[SyntaxError]: A parameter property may not be declared using a binding pattern.
   ┌─ keywords-2.ts:34:24
   │
34 │     constructor(public {}) {}
   │                        ^^


```


